# Python-IT

./: .gitignore  DWDataReaderHeader.py  DataReader.py  IT.py  Interface.py  Readme.md  absorption.py  calibration_calculations.py  controller.py  example.py  final_report.docx  iso_calculations.py  main.py  model.py  pyproject.toml  requirements.txt
