[project]
name = "impedance-tube-automation"
version = "0.1.0"
description = "Automate Dewesoft to conduct impedance tube measurements according to ISO 10534-2."
authors = [
    { name = "João Volpato", email = "joao.volp@vibroacustica.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pywin32==308",
    "PyQt6>=6.9.1",
    "pandas==2.2.0",
    "python-docx==1.1.0",
    "numpy==1.26.3",
    "scipy==1.12.0",
    "matplotlib==3.8.3",
    "lxml==5.1.0",
    "python-dotenv>=1.1.1",
]

[tool.setuptools]
package-dir = {"" = "."}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 
